    to terminate without removing the lockfile.
    - So we have to catch several signals now
      - SIGINT and SIGTERM. One of this will be send from Nagios 
      - SIGALRM. Caused by alarm(). Now with output usable in Nagios.
    - Instead of generating an empty file as lock file we write the process identifier of the running plugin
      process into the lock file. If a session crashes for some reason an a lock file is left we are in a 
      situation where signal processing won't help. But here the next run of the plugin reads the PID and checks
      for the process. If there is no process anymore it will remove the lock file and create a new one.
      Thanks to Simon Meggle, Consol, for the idea.
  - Removed "die" for opening the authfile or the session lock file with an unless construct. The plugin will
    report an "understandable" message to the monitor instead of causing an internal error code.
  - vm_cpu_info() and host_cpu_info()
    - Removed threshold for ready and wait. Therefore thresholds are no possible 
      without subselect.

- 26 Feb 2014 M.Fuerstenau version 0.9.10
  - Bugfixes.
    - Corrected typo in dc_runtime_info() line 660.
    - Corrected typo in help().
    - Corrected bug in datastore_volumes_info(). Giving absolute thresholds
      for a single volume was not possible. Fixed.
  - Removed print_usage(). Due to mass of parameters it is not possible to display
    a short usage message. Instead of that the output of the help is included
    in the package as a file.
  - Updated default timeout to 90 secs. to avoid timeouts.
  - Before accessing the session file (and lock file) we have a random sleep up
    7 secs.. This is to avoid a concurrent access in case of a monitor restart
    or a "Schedule a check of all services on this host"
  - In case of a locked session file the wait loop is not fix to 1 sec any more.
    Instead of this it uses a random period up to 5 sec.. So we minimize the risc
    of concurrent access.