@@ -940,3 +940,9 @@ History:
   - In case of a locked session file the wait loop is not fix to 1 sec any more.
     Instead of this it uses a random period up to 5 sec.. So we minimize the risc
     of concurrent access.
+
+- 7 Mar 2014 M.Fuerstenau version 0.9.11
+  - Updated README
+    - Section for removing HTML tags was reworked
+  - Added blacklist to host_net_info() so that interfaces with -S net can
+    be blacklisted.
